--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tinker</title>
-    <link href="./css/index.styl" rel="stylesheet" />
+    <link href="./css/index.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
